Bug fixes: * Text showing what item is displayed is now also correct when selecting an item manually from the list * Grey box over displayed item name now doesn't overlap item selection dropdown

--- a/Extension/content-style.css
+++ b/Extension/content-style.css
@@ -5,7 +5,6 @@
     left: 0px;
     width: 100%;
     height: 100%;
-    z-index: 100;
     opacity: 1;
     border-radius: 10px;
 }
